--- a/signup/style.css
+++ b/signup/style.css
@@ -8,7 +8,38 @@
 body {
   background-color: #f4f6fb;
 }
+header {
+  background: white;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 60px;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  width: 45px;
+  margin-right: 10px;
+}
+
+.logo h2 {
+  color: #0d47a1;
+}
+
+.logo span {
+  color: #00bcd4;
+}
 header {
   display: flex;
   justify-content: space-between;
@@ -32,6 +63,23 @@ header {
   font-weight: bold;
   font-size: 22px;
   color: #0056b3;
+}
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 35px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
+.nav-links a.active,
+.nav-links a:hover {
+  color: #00bcd4;
 }
 
 nav a {
